fix(app): label not aligned with logo

--- a/projects/showcase/src/app/app.component.scss
+++ b/projects/showcase/src/app/app.component.scss
@@ -27,6 +27,7 @@
       padding: 1rem;
       padding-bottom: 2rem;
       line-height: 24px;
+      display: flex;
       flex: 1;
 
       img {
